fixed the animation on the elixir page on safari

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -748,9 +748,9 @@ aside {
   margin-left: 0px;
   position: sticky;
   position: -webkit-sticky;
- position: -moz-sticky;
- position: -ms-sticky;
- position: -o-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
   top: 0;
 }
 
@@ -1266,12 +1266,9 @@ ul.need_sections li .section-content {
   transition-duration: 1s;
 }
 
-.height_rejuvenate_tall {
-    height: 103vh;
-}
-
 .height_rejuvenate {
     height: 103vh;
+    z-index: 0;
 }
 
 
@@ -1280,7 +1277,7 @@ ul.need_sections li .section-content {
   grid-column: 4/ span 3;
   grid-row: 1/ span 1;
   height: 90vh;
-  z-index: 1;
+  z-index: 100;
 }
 
 .unwind_section {
@@ -1294,14 +1291,16 @@ ul.need_sections li .section-content {
 
 div.title {
   opacity: 1;
-  -webkit-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -ms-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
+  transition-duration: 2s;
+  -webkit-transition: opacity 2s ease-in-out;
+  -moz-transition: opacity 2s ease-in-out;
+  -ms-transition: opacity 2s ease-in-out;
+  -o-transition: opacity 2s ease-in-out;
 }
 
 div.hide_title {
   opacity: 0;
+  transition-duration: 2s;
   -webkit-transition: opacity 1s ease-in-out;
   -moz-transition: opacity 1s ease-in-out;
   -ms-transition: opacity 1s ease-in-out;
